[gd_scene load_steps=2 format=3 uid="uid://du8s1e7hcbg8b"]

[ext_resource type="Script" path="res://addons/Event Sheet Plugin/GUI/EventSheet/event_sheet.gd" id="1_y1c7r"]

[node name="EventSheet" type="Panel" node_paths=PackedStringArray("event_container", "popup_menu")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_y1c7r")
event_container = NodePath("ScrollContainer/MarginContainer/VBoxContainer")
popup_menu = NodePath("PopupMenu")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 6

[node name="AddEventOrAction" type="Window" parent="."]
title = "Add event or action"
position = Vector2i(560, 215)
size = Vector2i(200, 300)
visible = false

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 1
item_0/text = "Add Event"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="index_pressed" from="PopupMenu" to="." method="_on_popup_menu_index_pressed"]
